# drone

./: .env.example  .gitignore  CMakeLists.txt  host_run.sh  platformio.ini  run.sh
exe/controller/: CMakeLists.txt
exe/controller/include/: Controller.hpp  Nrf24l01Config.hpp  config.hpp
exe/controller/include/controller_soc_meter/: ControllerSocMeter.hpp  ControllerSocMeterConfig.hpp
exe/controller/include/joystick/: JoystickConfig.hpp  JoystickManager.hpp  JoystickReadings.hpp  MuxConfig.hpp
exe/controller/src/: Controller.cpp  main.cpp
exe/controller/src/controller_soc_meter/: ControllerSocMeter.cpp
exe/controller/src/joystick/: JoystickManager.cpp
exe/drone/: CMakeLists.txt
exe/drone/include/: Drone.hpp  DroneConfig.hpp  EngineManagerConfig.hpp  types.hpp
exe/drone/include/drone_movement/: DroneMovement.hpp
exe/drone/include/drone_soc_meter/: DroneSocMeter.hpp
exe/drone/include/engine/: EngineControlSignals.hpp
exe/drone/src/: Drone.cpp  EngineManager.cpp
exe/drone/src/engine/: Engine.cpp  EngineControlSignals.cpp
include/: pin_map.hpp
include/MPU6050/: AngleReadings.hpp  MPU6050.hpp
include/NRF24L01+/: RC_Module.hpp  RC_RX_Module.hpp  RC_TX_Module.hpp
include/NRF24L01_plus/: NRF24L01Plus.hpp  NRF24L01PlusRX.hpp  NRF24L01PlusTX.hpp  RC_Module.hpp  RC_RX_Module.hpp  RC_TX_Module.hpp
include/adc_gpio/: AdcGpio.hpp
include/adc_unit/: AdcUnit.hpp
include/cell_soc_meter/: CellSocMeter.hpp
include/controller/: Controller.hpp
include/controller/controller_soc_meter/: ControllerSocMeter.hpp
include/drone/: Drone.hpp
include/drone/drone_soc_meter/: DroneSocMeter.hpp
include/drone/engine/: Engine.hpp  EngineControlSignals.hpp  EngineSpeedSetpoints.hpp  EngineSpeeds.hpp
include/drone_movement/: DroneMovement.hpp
include/engine/: Engine.hpp
include/joystick/: Joystick.hpp  JoystickManager.hpp
include/multiplexer/: FourChannelMux.hpp
include/pid/: PID.hpp
include/pin_map/: pin_map.hpp
lib/MPU6050/: CMakeLists.txt
lib/NRF24L01/: CMakeLists.txt
lib/NRF24L01/src/: NRF24L01.cpp
lib/four_channel_mux/include/: FourChannelMux.hpp  FourChannelMuxConfig.hpp
lib/pid/include/: PID.hpp
lib/static_checked_array/include/: StaticCheckedArray.hpp
libs/MPU6050/: CMakeLists.txt
libs/MPU6050/include/: MPU6050.hpp  RotationReadings.hpp
libs/MPU6050/src/: MPU6050.cpp
libs/NRF24L01/: CMakeLists.txt
libs/NRF24L01/include/: NRF24L01.hpp  NRF24L01Config.hpp  NRF24L01RX.hpp
libs/NRF24L01/src/: NRF24L01.cpp  NRF24L01RX.cpp  NRF24L01TX.cpp
libs/adc_unit/include/: AdcUnit.hpp
libs/adc_unit/src/: AdcUnit.cpp
libs/four_channel_mux/include/: FourChannelMux.hpp
libs/pid/: CMakeLists.txt
libs/static_checked_array/src/: StaticCheckedArray.cpp
libs/unique_value_map/include/: UniqueValueMap.hpp
libs/unique_value_map/src/: UniqueValueMap.cpp
libs/unique_value_map/tests/: CMakeLists.txt  test.cpp
src/MPU6050/: CMakeLists.txt  MPU6050.cpp
src/NRF24L01/: NRF24L01TX.cpp
src/NRF24L01+/: RC_Module.cpp  RC_RX_Module.cpp  RC_TX_Module.cpp
src/NRF24L01_plus/: NRF24L01Plus.cpp  NRF24L01PlusRX.cpp  NRF24L01PlusTX.cpp  NRF24L01RX.cpp  RC_Module.cpp  RC_RX_Module.cpp  RC_TX_Module.cpp
src/adc_gpio/: AdcGpio.cpp
src/adc_unit/: AdcUnit.cpp
src/cell_soc_meter/: CellSocMeter.cpp
src/controller/: Controller.cpp  main.cpp
src/controller/controller_soc_meter/: ControllerSocMeter.cpp
src/controller/include/joystick/: Joystick.hpp  JoystickManagerConfig.hpp
src/controller/src/: main.cpp
src/drone/: Drone.cpp  Drone.hpp  Engine.cpp  dshot.pio  main.cpp
src/drone/drone_soc_meter/: DroneSocMeter.cpp
src/drone/engine/: Engine.cpp
src/drone/include/: EngineManager.hpp
src/drone/include/engine/: Engine.hpp
src/drone/src/drone_soc_meter/: DroneSocMeter.cpp
src/engine/: Engine.cpp
src/joystick/: Joystick.cpp  JoystickManager.cpp
src/multiplexer/: FourChannelMux.cpp
src/pid/: PID.cpp
